--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGODB_URL=mongodb+srv://ss7527767_db_user:ankur20145@cluster0.8os8kte.mongodb.net/?appName=Cluster0
 PORT=3000
 JWT_SECRET_KEY=gigflow_secret
+CLIENT_URL=http://localhost:5173
